2005-10-14  Bill Wohler  <wohler@newt.com>

	* mh-seq.el (mh-non-seq-mode-line-annotation): Moved
	make-variable-buffer-local call to top level to avoid warnings in
	CVS Emacs.

	* mh-comp.el (mh-insert-letter): Replaced deprecated read-input
	with read-string.

2005-10-09  Bill Wohler  <wohler@newt.com>

	* mh-init.el (mh-image-load-path): New function that adds the path
	to the MH-E images to the image-load-path or load-path depending
	on the version of Emacs.

	* mh-customize.el: Call mh-image-load-path just before
	mh-tool-bar-define so that the toolbar images can be found.

2005-10-04  Bill Wohler  <wohler@newt.com>

	* ChangeLog: Moved contents into ChangeLog.1 and trimmed.
	
	* ChangeLog.1: New file. Contains old ChangeLog.


  Copyright (C) 2005 Free Software Foundation, Inc.

  Copying and distribution of this file, with or without modification,
  are permitted in any medium without royalty provided the copyright
  notice and this notice are preserved.

;;; arch-tag: 87324964-69b6-4925-a3c2-9c1df53d7d51